--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <aside id="sidebar" class="sidebar bg-gray-800 text-white flex flex-col p-4 shadow-lg">
             <div class="flex items-center mb-8">
                 <span class="p-2 bg-indigo-500 rounded-lg">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-white"><path d="M12 2L2 7l10 5 10-5-10-5z"></path><path d="M2 17l10 5 10-5"></path><path d="M2 12l10 5 10-5"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 a/24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-white"><path d="M12 2L2 7l10 5 10-5-10-5z"></path><path d="M2 17l10 5 10-5"></path><path d="M2 12l10 5 10-5"></path></svg>
                 </span>
                 <h1 class="text-xl font-bold ml-3 sidebar-logo-text">EngiTrack</h1>
             </div>
@@ -253,14 +253,19 @@
                     auth = getAuth(app);
 
                     onAuthStateChanged(auth, user => {
-                        if (user) {
-                            // User is signed in
+                        // Only proceed if the user is not anonymous
+                        if (user && !user.isAnonymous) {
+                            // User is signed in with Email/Password
                             authScreen.classList.add('hidden');
                             appScreen.classList.remove('hidden');
                             state.userId = user.uid;
                             setupRealtimeListeners();
                         } else {
-                            // User is signed out
+                            // User is signed out or is an old anonymous user
+                            if (user && user.isAnonymous) {
+                                // Clean up old anonymous sessions
+                                signOut(auth);
+                            }
                             authScreen.classList.remove('hidden');
                             appScreen.classList.add('hidden');
                             state.userId = null;
